...
    @State private var showOnlySelected = false
    @State private var courseArray = loadCourses()

    var body: some View {
        VStack {
            Text("Course Catalog")
                .accessibilityIdentifier("title")
            
            List {
                ForEach(filteredCourses) { course in
                    CourseRow(course: course)
                        .onTapGesture {
                            toggleSelectedStatus(for: course.id)
...
            HStack {
                Spacer(minLength: 20)
                Text("Focus Mode")
                Toggle(isOn: $showOnlySelected) {
                    
                }
                .accessibilityIdentifier("showOnlySelectedCoursesSwitch")
                .accessibilityLabel("showOnlySelectedCoursesSwitch")
            .padding(10)
            }
        }
    }
    
...
